# MBootCore

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILD_INFO  BUILD_OPTIONS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ThirdPartyLicenses.md
apps/mboot-cli/: CMakeLists.txt  CliApplication.cpp  CliApplication.hpp  CliCommands.cpp  CliCommands.hpp  CliFormatter.cpp  CliFormatter.hpp  CliParser.cpp  CliParser.hpp  CliProgress.cpp  CliProgress.hpp  main.cpp
apps/mboot-studio/: CMakeLists.txt
apps/mboot-studio/src/: AboutDialog.cpp  ActionManager.cpp  ApplicationController.cpp  CommandManager.cpp  DSPGuiIntegration.cpp  DeviceDetailsWidget.cpp  DeviceDiscoveryWidget.cpp  DeviceFilterProxyModel.cpp  DeviceListModel.cpp  DevicePropertiesWidget.cpp  DeviceTreeModel.cpp  MainWindow.cpp  NotificationCenter.cpp  RecentFilesManager.cpp  SettingsManager.cpp  ShortcutManager.cpp  SplashScreen.cpp  ThemeManager.cpp  UpdateChecker.cpp  WindowStateManager.cpp  main.cpp
apps/mboot-studio/tests/: CMakeLists.txt  devtools_test.cpp  diagnostics_test.cpp  discovery_test.cpp  firmware_test.cpp  flash_test.cpp  framework_test.cpp  gpt_test.cpp  integration_test.cpp  job_test.cpp  l10n_test.cpp  logs_test.cpp  plugin_test.cpp  session_test.cpp  settings_test.cpp  theme_test.cpp  transport_test.cpp  vendor_test.cpp  workflow_test.cpp
examples/: CMakeLists.txt
examples/backup_partition/: README.md  main.cpp
examples/basic_connect/: README.md  main.cpp
examples/cli_embedding/: README.md  main.cpp
examples/custom_vendor/: README.md  main.cpp
examples/device_discovery/: README.md  main.cpp
examples/dynamic/HelloPlugin/: HelloPlugin.cpp
examples/dynamic/ProtocolPlugin/: ProtocolPlugin.cpp
examples/firehose/: main.cpp
examples/flash_partition/: README.md  main.cpp
examples/job_pipeline/: README.md  main.cpp
examples/minimal/: README.md  main.cpp
examples/plugin_creation/: README.md  main.cpp
examples/runtime_usage/: README.md  main.cpp
examples/sahara/: main.cpp
examples/sdk/: dummy_discovery_plugin.cpp  dummy_package_plugin.cpp  dummy_protocol_plugin.cpp  dummy_vendor_plugin.cpp  dummy_workflow_plugin.cpp  qualcomm_vendor_plugin.cpp  vendor_registration_example.cpp
examples/workflow_execution/: README.md  main.cpp
lib/: CMakeLists.txt
lib/include/mbootcore/: MBootCore.hpp
lib/src/: SafeParser.hpp
lib/src/application/: Session.cpp
lib/src/benchmark/: BenchmarkRunner.cpp
lib/src/common/: NumericUtils.hpp
lib/src/config/: ConfigManager.cpp
lib/src/device/: DefaultDevice.cpp
lib/src/diagnostics/: DiagnosticCheck.cpp  DiagnosticSession.cpp  DiagnosticsManager.cpp  VendorMaturityCheck.hpp
lib/src/discovery/: DeviceDiscoveryEngine.cpp  ProtocolNegotiationEngine.cpp  ProtocolRegistry.cpp  VirtualDeviceDetector.cpp
lib/src/domain/: Error.cpp
tests/: CMakeLists.txt
tests/benchmark/: BenchmarkTest.cpp
tests/cli/: CliCommandTest.cpp  CliFormatterTest.cpp  CliIntegrationTest.cpp  CliParserTest.cpp  CliScriptTest.cpp  VirtualRuntimeCliTest.cpp
tests/cmake/: BuildOptionsValidation.cmake  ExportValidation.cmake
tests/compatibility/: CompatibilityTest.cpp
tests/concurrency/: ConcurrencyTest.cpp
tests/config/: ConfigTest.cpp
tests/corpus/: README.md
tests/diagnostics/: DiagnosticsTest.cpp
tests/discovery/: DiscoveryTest.cpp
tests/domain/: TypesTest.cpp
tests/dsp/: DSPTest.cpp
tests/elf/: ElfEngineTest.cpp
tests/faults/: FaultTest.cpp
tests/firehose/: FirehoseFaultInjectionTest.cpp  FirehoseStressTest.cpp
tests/firmware/: FirmwarePackageTest.cpp
tests/fuzz/: FuzzElfParser.cpp  FuzzFirehoseXml.cpp  FuzzSaharaParser.cpp  FuzzTest.cpp
tests/generic/: GenericFlashTest.cpp
tests/gpt/: GPTModelsTest.cpp  GPTParserTest.cpp  GPTWriterTest.cpp  PartitionManagerTest.cpp
tests/hardware/: CMakeLists.txt  HardwareDetection.hpp  mediatek_hardware_test.cpp  qualcomm_hardware_test.cpp  unisoc_hardware_test.cpp
tests/job/: JobEngineTest.cpp
tests/json/: JsonRegressionTest.cpp
tests/loader/: LoaderFrameworkTest.cpp  VirtualLoaderRepository.hpp
tests/logging/: LoggingTest.cpp
tests/longrunning/: LongRunningTest.cpp
tests/memory/: MemoryTrackerTest.cpp
tests/mocks/: MockFlashDevice.hpp  MockLogger.hpp  MockSerialBackend.hpp  MockTcpBackend.hpp  MockTransport.hpp  MockUdpBackend.hpp  MockUsbBackend.hpp
tests/network/: NetworkAddressTest.cpp
tests/pipeline/: BootPipelineTest.cpp
tests/platform/: DynamicLibraryTest.cpp
tests/plugin/: DynamicPluginLoadingTest.cpp  PluginTest.cpp
tests/profiler/: ProfilerTest.cpp
tests/protocol/: ExtensibilityProofTest.cpp  PacketSerializationTest.cpp  ProtocolSemanticDesignTest.cpp  UNISOCProtocolTest.cpp
tests/recovery/: RecoveryTest.cpp
tests/runtime/: RuntimeTest.cpp
tests/sdk/: APICompatibilityTest.cpp  CMakeLists.txt  DependencyGraphTest.cpp  DocGeneratorToolTest.cpp  DocumentationGeneratorTest.cpp  EnvironmentCheckerTest.cpp  ManifestValidationTest.cpp  PluginCompatibilityTest.cpp  PluginWizardTest.cpp  RegistrationTest.cpp  SDKDoctorTest.cpp  SDKInfoTest.cpp  SDKValidatorTest.cpp  TemplateGenerationTest.cpp  VendorSDKTest.cpp  VersionCompatibilityTest.cpp  VersionTest.cpp
tests/security/: CryptoFallbackTest.cpp  MbedTLSCryptoTest.cpp  MbedTLSSignatureVerifierTestAccess.hpp  ParserRobustnessTest.cpp  SafeParserTest.cpp  SecurityTest.cpp
tests/session/: SessionTest.cpp
tests/stress/: StressTest.cpp
tests/telemetry/: TelemetryTest.cpp
tests/transport/: BackendMockTest.cpp  BackendSelectionTest.cpp  SerialEnumeratorTest.cpp  SerialIntegrationTest.cpp  TcpIntegrationTest.cpp  TransportBenchmark.cpp  TransportTest.cpp  TransportTestUtils.hpp  UdpIntegrationTest.cpp
tests/virtual/: FirehoseVirtualTest.cpp  GoldenVectorFramework.hpp  SaharaVirtualTest.cpp  VirtualFirehoseDevice.hpp  VirtualFlashDevice.cpp  VirtualFlashDevice.hpp  VirtualRuntime.hpp  VirtualSaharaDevice.hpp
tests/workflow/: WorkflowEngineTest.cpp
tools/: CMakeLists.txt  DocGenerator.cpp  DocGenerator.hpp  PluginWizard.cpp  PluginWizard.hpp
(+655 files in other folders)
